--- a/index.tex
+++ b/index.tex
@@ -1,5 +1,5 @@
 %TEX TS-program = xelatex
-\documentclass[11pt]{article}
+\documentclass[11pt,twoside]{article}
 \usepackage[margin=2.54cm]{geometry} % set margins to 1 inch all the way around
 \usepackage{fontspec}
 	\defaultfontfeatures{Ligatures=TeX}
@@ -10,7 +10,7 @@
 	\setmonofont[Scale=MatchLowercase]{Anonymous Pro}
 
 \renewcommand{\ttdefault}{mf}
-
+\usepackage{emptypage} % this keeps footers off the blank page
 % set line spacing to 1.5
 \usepackage{setspace}
     \onehalfspacing 
@@ -47,24 +47,39 @@
 \fancyhead{}
 \renewcommand{\headrulewidth}{0pt}
 \fancyfoot{}
-\fancyfoot[FR]{\textit{\textsc{CSC} Proprietary and Confidential}}
-\fancyfoot[C]{\thepage}
+\fancyfoot[LO,RE]{\small\textit{\textsc{CSC} Confidential. For Internal Distribution Only.}}
+\fancyfoot[LE,RO]{\thepage}
 
 \begin{document}
     \input{title}
+    \cleardoublepage
     \tableofcontents
-    \clearpage
+    \pagenumbering{roman}
+    \cleardoublepage
     \input{executive_summary}
+    \pagenumbering{arabic}
     \input{introduction}
     \input{use_cases}
     \input{solution}
     \input{future}
     \input{conclusion}
+    \cleardoublepage
     \include{appendix}
+    \cleardoublepage
     \bibliographystyle{plain}
     \bibliography{bibliography}
     \printglossaries
-%    \clearpage
     \addcontentsline{toc}{section}{Index}
+    \cleardoublepage
+    % we need to define the plain style to be fancy to print the footers at the bottom of the index
+    \pagestyle{fancy}
+    \fancypagestyle{plain}
+    \fancyhead{}
+    \renewcommand{\headrulewidth}{0pt}
+    \fancyfoot{}
+    \fancyfoot[LO]{\small\textit{\textsc{CSC} Confidential. For Internal Distribution Only.}}
+    \fancyfoot[RE]{\small\textit{\textsc{CSC} Confidential. For Internal Distribution Only.}}
+    \fancyfoot[LE]{\thepage}
+    \fancyfoot[RO]{\thepage}
     \printindex
 \end{document} 
