minor syntactical updates

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -4,4 +4,4 @@ ClimatEdge\texttrademark{}\index{ClimatEdge} for general insurance underwriters 
 
 A big data\index{big data}framework that is both flexible and loosely coupled has the greatest chance of meeting future offering requirements while allowing various technology components to be upgraded. Many commercially available offerings are dependent on particular technologies which have well established strengths and weaknesses. If the framework presentation layer is dependent on a particular storage layer implementation, those two layers are forever tightly coupled and unable to be easily separated without a major overhaul. While it is expected that a certain amount of coupling is needed (unless cumbersome abstraction layers are inserted), e.g. the presentation layer may need to know that certain data structures exist in the data store, it should not matter if those structures are implemented in Cassandra\index{Cassandra} or MySQL\index{MySQL}.\\
 
-There are several areas centering on how best to store publicly available data sets that require future research. There is dizzying array of tradeoffs in deciding whether to implement remote \gls{api}s, clone the data sets internally, or develop and deploy big data\index{big data} appliances in partner agencies. What is even more daunting is that the solutions will likely vary based on the data set and the offering that comes from it. What works well for climate data, may not work well for healthcare data.\\
+There are several areas of future research centering on how best to store publicly available data sets. There is dizzying array of tradeoffs in deciding whether to implement remote \gls{api}s, clone the data sets internally, or develop and deploy big data\index{big data} appliances in partner agencies. What is even more daunting is that the solutions will likely vary based on the data set and the offering that comes from it. What works well for climate data, may not work well for healthcare data.\\
